--- a/main.html
+++ b/main.html
@@ -4,47 +4,7 @@
 <head>
     <title>My BCIT Project</title>
     <meta name="comp1800 template" content="My 1800 App">
-    <div style="background-color: burlywood;font-weight: 'Arial';">
-        <span style="display: inline-block;">
-            <img style="width: 70px;" src="images/elmo.jpg" alt="Reza hikes">
-            Reza's Hikes
-        </span>
-    </div>
-    <div class="container-fluid  bg-dark text-light p-5">
-        <div class="container  bg-dark text-light p-5">
-        <h1 class="display-4">good morning, <span id="quote-goes-here"></span></h1>
-        <h1>Welcome to Reza's Hiking App</h1>
-        <p>Quote of the day:Learing know no exhaustion,fear or regret<span id="quote-goes-here"></span></p>
-      </div> 
-   </div>
 
-   <!-- newwwwwwwwwwwwwwwwwwwww -->
-   <div class="container"> 
-    <h1>Some popular hikes</h1>
-    <!-- Here is the container for cards  -->
-    <div class="container">
-        <div id="hikes-go-here" class="row row-cols-auto">
-        </div>
-    </div>
-</div>
-
-<!-- Templates for general use, not displayed -->
-<template id="hikeCardTemplate">
-    <div class="card py-2 mx-2" style="width: 18rem">
-        <img class="card-image card-img-top" src=" ..." alt="..." />
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-length">placeholder</p>
-            <br />
-            <p class="card-text">
-                Some quick example text to build on the card title and make up the
-                bulk of the card's content.
-            </p>
-            <a class="btn btn-primary card-href">Read more ...</a>
-        </div>
-    </div>
-</template>
-<!-- newwwwwwwwwwwwwwwwwwwww -->
     <!------------------------>
     <!-- Required meta tags -->
     <!------------------------>
@@ -58,23 +18,23 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-    </script>
+        </script>
 
     <!-------------------------------------------------------->
-    <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
+    <!-- Firebase 8 Library-related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script> 
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script> 
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
-     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
 
     <!-------------------------------------------->
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/style.css"> 
+    <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 
@@ -88,6 +48,41 @@
 
     <!-- the body of your page goes here -->
     <!-- stuff -->
+    <div class="container-fluid bg-light text-dark p-5">
+        <div class="container bg-light p-5">
+            <h1 class="display-4">こんにちは、 <span id="name-goes-here"></span>さん</h1>
+            <hr>
+            <p>Quote of the day: <span id="quote-goes-here"></span></p>
+        </div>
+    </div>
+
+    <!-- Container for all hike cards -->
+    <div class="container">
+        <h1>Some popular hikes</h1>
+        <!-- Here is the container for cards  -->
+        <div class="container">
+            <div id="hikes-go-here" class="row row-cols-auto">
+            </div>
+        </div>
+    </div>
+
+    <!-- Templates for general use, not displayed -->
+    <template id="hikeCardTemplate">
+        <div class="card py-2 mx-2" style="width: 18rem">
+            <img class="card-image card-img-top" src=" ..." alt="..." />
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-length">placeholder</p>
+                <br />
+                <p class="card-text">
+                    Some quick example text to build on the card title and make up the
+                    bulk of the card's content.
+                </p>
+                <a class="btn btn-primary card-href">Read more ...</a>
+                <i class="material-icons">bookmark_border</i>
+            </div>
+        </div>
+    </template>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
@@ -95,9 +90,10 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="./scripts/firebaseAPI_TEAM99.js"></script> 
+    <script src="./scripts/firebaseAPI_TEAM99.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/main.js"></script>
+    <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
 
