--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
     <!-- stuff -->
     <div class="container-fluid bg-light text-dark p-5">
         <div class="container bg-light p-5">
-            <h1 class="display-4">こんにちは、 <span id="name-goes-here"></span>さん</h1>
+            <h1 class="display-4">Welcome, <span id="name-goes-here"></span></h1>
             <hr>
             <p>Quote of the day: <span id="quote-goes-here"></span></p>
         </div>
