--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- stuff -->
     <div class="container text-center">
         <img class="d-block mx-auto mb-4 responsive" src="./images/hike1.jpg" alt="">
-        <h1>Welcome to Misuzu's Hiking App</h1>
+        <h1>Welcome to Reza's Hiking App</h1>
         <a href="login.html" class="btn btn-danger" role="button">Log in</a>
     </div>
 
