--- a/eachHike.html
+++ b/eachHike.html
@@ -18,7 +18,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-        </script>
+    </script>
 
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
@@ -27,13 +27,14 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
     <!-------------------------------------------->
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
     <link rel="stylesheet" href="./styles/style.css">
 
 </head>
@@ -67,7 +68,7 @@
             </div>
         </div>
     </div>
-
+    
     <template id="reviewCardTemplate">
         <div class="card bg-secondary">
             <img class="card-img-top">
@@ -80,11 +81,12 @@
                 <p class="scrambled">placeholder</p>
                 <p class="flooded">placeholder</p>
                 <br>
-                <p class="description">This card has supporting text below as a natural lead-in to additional content.
-                </p>
+                <p class="description">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
         </div>
     </template>
+
+    
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
@@ -94,7 +96,7 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_TEAM99.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <script src="scripts/eachHike.js"></script>
+    <script src="./scripts/eachHike.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
