--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-        </script>
+    </script>
 
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
@@ -27,8 +27,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
     <!-------------------------------------------->
     <!-- Other libraries and styles of your own -->
@@ -49,11 +50,10 @@
     <!-- the body of your page goes here -->
     <!-- stuff -->
     <div class="container text-center">
-        <img class="d-block mx-auto mb-4 responsive" src="./images/hike1.jpg" alt="">
+        <img class="d-block mx-auto mb-4 responsive" src="./images/elmo.jpg" alt="">
         <h1>Welcome to Reza's Hiking App</h1>
-        <a href="login.html" class="btn btn-danger" role="button">Log in</a>
-    </div>
-
+        <a href="login.html" class="btn btn-info" role="button">Log in</a>
+   </div>
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
 
@@ -63,9 +63,10 @@
     <script src="./scripts/firebaseAPI_TEAM99.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
+
     <script>
         logout();       //make sure user is logged out
-    </script>
+</script>
 
 </body>
 
