--- a/saved.html
+++ b/saved.html
@@ -18,7 +18,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-        </script>
+    </script>
 
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
@@ -27,8 +27,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
     <!-------------------------------------------->
     <!-- Other libraries and styles of your own -->
@@ -48,7 +49,6 @@
 
     <!-- the body of your page goes here -->
     <!-- stuff -->
-
     <div class="container">
         <h1>Saved Hikes for <span id=name-goes-here></span></h1>
         <!-- Here is container for cards  -->
@@ -56,10 +56,10 @@
             <div id="hikeCardGroup" class="row row-cols-auto">
             </div>
         </div>
-    </div>
+</div>
 
-    <!-- Templates for general use, not displayed -->
-    <template id="savedCardTemplate">
+<!-- Templates for general use, not displayed -->
+<template id="savedCardTemplate">
         <div class="card py-2 mx-2 bg-light" style="width: 10rem;">
             <img class="card-image card-img-top" src=" ..." alt="...">
             <div class="card-body">
@@ -69,8 +69,7 @@
                 <a class="btn btn-secondary card-href" id="read-more">Read more ...</a>
             </div>
         </div>
-    </template>
-
+ </template>
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
 
@@ -79,9 +78,8 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_TEAM99.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/saved.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
-
+    <script src="./scripts/saved.js"></script>
 </body>
 
 </html>
