--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,23 +1,24 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-danger-subtle">
+<nav class="navbar navbar-expand-lg navbar-light bg-warning">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="../images/hikeLogo.png" height="36">
             Reza Hikes</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="../main.html">Home</a>
+                    <a class="nav-link" href="">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../profile.html">Profile</a>
+                    <a class="nav-link" href="../main.html">Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../saved.html">Saved</a>
-                </li>
+                </li>       
                 <li class="nav-item">
                     <a class="nav-link" href="../main.html">About Us</a>
                 </li>
