--- a/main.html
+++ b/main.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>My BCIT Project</title>
-    <meta name="comp1800 template" content="My 1800 App">
+    <title>My HIKE ROUTE</title>    <meta name="comp1800 template" content="My 1800 App">
 
     <!------------------------>
     <!-- Required meta tags -->
@@ -36,6 +35,22 @@
     <!-------------------------------------------->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
+
+
+    <title>Yellow Footer</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        footer {
+            background-color: #ffd700; /* Yellow color */
+            color: #fff; /* Text color */
+            text-align: center;
+            padding: 20px;
+        }
+    </style>
+
 
 </head>
 
@@ -95,6 +110,17 @@
     <!-- <script src="./scripts/script.js"></script> -->
     <script src="./scripts/main.js"></script>
 
+
+
+
+
+
+
+<!----newwwwwwwwwwwwwwwwwwwwwwwwwww backgroundddddddddd---->
+<div class="bg"></div>
+<div class="bg bg2"></div>
+<div class="bg bg3"></div>
+<div class="content"></div>
 </body>
 
 </html>
