--- a/template.html
+++ b/template.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>My BCIT Project</title>
-    <meta name="comp1800 template" content="My 1800 App">
+    <title>My HIKE ROUTE</title>    <meta name="comp1800 template" content="My 1800 App">
 
     <!------------------------>
     <!-- Required meta tags -->
